--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,21 @@
 [user]
-	name = Antoni Rozanski
-	email = antoni.rozanski@allegro.pl
+     name = Antoni Rozanski
+     email = antoni.rozanski@allegro.pl
 [core]
-	autocrlf = input
+    autocrlf = input
+    pager = delta
+
+[interactive]
+    diffFilter = delta --color-only
+[add.interactive]
+    useBuiltin = false # required for git 2.37.0
+
+[delta]
+    navigate = true    # use n and N to move between diff sections
+    light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+
+[merge]
+    conflictstyle = diff3
+
+[diff]
+    colorMoved = default
