--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-     name = Antoni Rozanski
+     name = Antoni Różański
      email = antoni.rozanski@allegro.pl
 [core]
     autocrlf = input
@@ -13,9 +13,17 @@
 [delta]
     navigate = true    # use n and N to move between diff sections
     light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+    features = side-by-side line-numbers decorations
+    whitespace-error-style = 22 reverse
+    navigate = true
 
 [merge]
     conflictstyle = diff3
 
 [diff]
     colorMoved = default
+
+[delta "decorations"]
+    commit-decoration-style = bold yellow box ul
+    file-style = bold yellow ul
+    file-decoration-style = none
